# 2024-P1-ManavTriv

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
